[gd_scene load_steps=13 format=3 uid="uid://bwxr0mrsrt0iu"]

[ext_resource type="Theme" uid="uid://cyua45ur0ijqo" path="res://assets/Main.theme" id="1_jp1gn"]
[ext_resource type="Script" path="res://panels/Programmer/Programmer.gd" id="1_xonfe"]
[ext_resource type="Script" path="res://panels/Programmer/ColorPicker.gd" id="2_dumhd"]
[ext_resource type="Script" path="res://panels/Programmer/ColorSystem.gd" id="2_xdlid"]
[ext_resource type="PackedScene" uid="uid://cbtm8eq5rbugv" path="res://components/ChannelSlider/ChannelSlider.tscn" id="4_rvdr4"]
[ext_resource type="Script" path="res://panels/Programmer/Channels.gd" id="6_drfid"]
[ext_resource type="Texture2D" uid="uid://bhl73t2e0jcwn" path="res://assets/icons/close.svg" id="7_nwwpk"]
[ext_resource type="Texture2D" uid="uid://cjx13jidaqjyf" path="res://assets/icons/Scene.svg" id="7_ofqgp"]
[ext_resource type="Texture2D" uid="uid://dnfqijjcnit7c" path="res://assets/icons/Cue_list.svg" id="8_7bmnv"]
[ext_resource type="Texture2D" uid="uid://c1cl6qetwg8st" path="res://assets/icons/Arrow_back.svg" id="8_fvid6"]
[ext_resource type="Texture2D" uid="uid://kkblmodueva1" path="res://assets/icons/Arrow_foward.svg" id="9_knja0"]
[ext_resource type="Script" path="res://panels/Programmer/SaveControls.gd" id="11_stngn"]

[node name="Programmer" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xonfe")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 355)
layout_mode = 2
theme = ExtResource("1_jp1gn")

[node name="TabContainer" type="TabContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Light" type="HBoxContainer" parent="HBoxContainer/TabContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/TabContainer/Light"]
layout_mode = 2
size_flags_horizontal = 3
vertical_scroll_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/TabContainer/Light/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="QuickButtons" type="PanelContainer" parent="HBoxContainer/TabContainer/Light/ScrollContainer/HBoxContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/TabContainer/Light/ScrollContainer/HBoxContainer/QuickButtons"]
layout_mode = 2

[node name="FULL" type="Button" parent="HBoxContainer/TabContainer/Light/ScrollContainer/HBoxContainer/QuickButtons/VBoxContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_vertical = 3
text = "FULL"

[node name="ZERO" type="Button" parent="HBoxContainer/TabContainer/Light/ScrollContainer/HBoxContainer/QuickButtons/VBoxContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_vertical = 3
text = "ZERO"

[node name="RESET" type="Button" parent="HBoxContainer/TabContainer/Light/ScrollContainer/HBoxContainer/QuickButtons/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "RESET"

[node name="LevelControls" type="PanelContainer" parent="HBoxContainer/TabContainer/Light/ScrollContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ColorSystem" type="HBoxContainer" parent="HBoxContainer/TabContainer/Light/ScrollContainer/HBoxContainer/LevelControls"]
layout_mode = 2
script = ExtResource("2_xdlid")
color_picker = NodePath("ColorPicker/VBoxContainer/Control/ColorPicker")

[node name="Dimmer" type="PanelContainer" parent="HBoxContainer/TabContainer/Light/ScrollContainer/HBoxContainer/LevelControls/ColorSystem"]
layout_mode = 2

[node name="DimmerSlider" parent="HBoxContainer/TabContainer/Light/ScrollContainer/HBoxContainer/LevelControls/ColorSystem/Dimmer" instance=ExtResource("4_rvdr4")]
layout_mode = 2
label_text = "Dimmer"
send_command = true
object_id = "programmer"
method = "Dimmer"
reset_method = "reset_Dimmer"
send_selection_value = "selected_fixtures"

[node name="ColorSliders" type="PanelContainer" parent="HBoxContainer/TabContainer/Light/ScrollContainer/HBoxContainer/LevelControls/ColorSystem"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/TabContainer/Light/ScrollContainer/HBoxContainer/LevelControls/ColorSystem/ColorSliders"]
layout_mode = 2

[node name="Red" parent="HBoxContainer/TabContainer/Light/ScrollContainer/HBoxContainer/LevelControls/ColorSystem/ColorSliders/HBoxContainer" instance=ExtResource("4_rvdr4")]
layout_mode = 2
label_text = "Red"
show_warning_bg = false
show_gradient_bg = true
graident_top_color = Color(1, 0, 0, 1)
send_command = false

[node name="Green" parent="HBoxContainer/TabContainer/Light/ScrollContainer/HBoxContainer/LevelControls/ColorSystem/ColorSliders/HBoxContainer" instance=ExtResource("4_rvdr4")]
layout_mode = 2
label_text = "Green"
show_warning_bg = false
show_gradient_bg = true
graident_top_color = Color(0, 1, 0, 1)
send_command = false

[node name="Blue" parent="HBoxContainer/TabContainer/Light/ScrollContainer/HBoxContainer/LevelControls/ColorSystem/ColorSliders/HBoxContainer" instance=ExtResource("4_rvdr4")]
layout_mode = 2
label_text = "Blue"
show_warning_bg = false
show_gradient_bg = true
graident_top_color = Color(0, 0, 1, 1)
send_command = false

[node name="ColorPicker" type="PanelContainer" parent="HBoxContainer/TabContainer/Light/ScrollContainer/HBoxContainer/LevelControls/ColorSystem"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/TabContainer/Light/ScrollContainer/HBoxContainer/LevelControls/ColorSystem/ColorPicker"]
layout_mode = 2

[node name="Control" type="Control" parent="HBoxContainer/TabContainer/Light/ScrollContainer/HBoxContainer/LevelControls/ColorSystem/ColorPicker/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(243.42, 239.52)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 6

[node name="ColorPicker" type="ColorPicker" parent="HBoxContainer/TabContainer/Light/ScrollContainer/HBoxContainer/LevelControls/ColorSystem/ColorPicker/VBoxContainer/Control"]
layout_mode = 1
offset_right = 298.0
offset_bottom = 306.0
scale = Vector2(0.8, 0.8)
size_flags_horizontal = 10
size_flags_vertical = 0
color = Color(0, 0, 0, 1)
picker_shape = 2
can_add_swatches = false
color_modes_visible = false
sliders_visible = false
hex_visible = false
presets_visible = false
script = ExtResource("2_dumhd")

[node name="ColorReset" type="Button" parent="HBoxContainer/TabContainer/Light/ScrollContainer/HBoxContainer/LevelControls/ColorSystem/ColorPicker/VBoxContainer"]
layout_mode = 2
text = "Reset"

[node name="ExtraIntensityChannels" type="PanelContainer" parent="HBoxContainer/TabContainer/Light/ScrollContainer/HBoxContainer/LevelControls/ColorSystem"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/TabContainer/Light/ScrollContainer/HBoxContainer/LevelControls/ColorSystem/ExtraIntensityChannels"]
layout_mode = 2

[node name="ChannelSlider3" parent="HBoxContainer/TabContainer/Light/ScrollContainer/HBoxContainer/LevelControls/ColorSystem/ExtraIntensityChannels/HBoxContainer" instance=ExtResource("4_rvdr4")]
layout_mode = 2
label_text = "White"
send_command = true
object_id = "programmer"
method = "ColorIntensityWhite"
reset_method = "reset_ColorIntensityWhite"
send_selection_value = "selected_fixtures"

[node name="ChannelSlider2" parent="HBoxContainer/TabContainer/Light/ScrollContainer/HBoxContainer/LevelControls/ColorSystem/ExtraIntensityChannels/HBoxContainer" instance=ExtResource("4_rvdr4")]
layout_mode = 2
label_text = "Amber"
send_command = true
object_id = "programmer"
method = "ColorIntensityAmber"
reset_method = "reset_ColorIntensityAmber"
send_selection_value = "selected_fixtures"

[node name="ChannelSlider" parent="HBoxContainer/TabContainer/Light/ScrollContainer/HBoxContainer/LevelControls/ColorSystem/ExtraIntensityChannels/HBoxContainer" instance=ExtResource("4_rvdr4")]
layout_mode = 2
label_text = "UV"
send_command = true
object_id = "programmer"
method = "ColorIntensityUV"
reset_method = "reset_ColorIntensityUV"
send_selection_value = "selected_fixtures"

[node name="Channels" type="VBoxContainer" parent="HBoxContainer/TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("6_drfid")

[node name="UniverseContainer" type="PanelContainer" parent="HBoxContainer/TabContainer/Channels"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/TabContainer/Channels/UniverseContainer"]
layout_mode = 2
vertical_scroll_mode = 0

[node name="PanelContainer2" type="PanelContainer" parent="HBoxContainer/TabContainer/Channels"]
layout_mode = 2
size_flags_vertical = 8

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/TabContainer/Channels/PanelContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/TabContainer/Channels/PanelContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
text = "Universe:"

[node name="OptionButton" type="OptionButton" parent="HBoxContainer/TabContainer/Channels/PanelContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 2

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/TabContainer/Channels/PanelContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 6

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/TabContainer/Channels/PanelContainer2/HBoxContainer2/PanelContainer"]
layout_mode = 2

[node name="Left" type="Button" parent="HBoxContainer/TabContainer/Channels/PanelContainer2/HBoxContainer2/PanelContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("8_fvid6")

[node name="Right" type="Button" parent="HBoxContainer/TabContainer/Channels/PanelContainer2/HBoxContainer2/PanelContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("9_knja0")

[node name="ClearAll" type="Button" parent="HBoxContainer/TabContainer/Channels/PanelContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10
text = "Clear All"
icon = ExtResource("7_nwwpk")

[node name="SaveControls" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
script = ExtResource("11_stngn")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/SaveControls"]
layout_mode = 2

[node name="SaveToScene" type="Button" parent="HBoxContainer/SaveControls/VBoxContainer"]
layout_mode = 2
tooltip_text = "Save to Scene"
icon = ExtResource("7_ofqgp")

[node name="SaveToCueList" type="Button" parent="HBoxContainer/SaveControls/VBoxContainer"]
layout_mode = 2
tooltip_text = "Save to CueList"
icon = ExtResource("8_7bmnv")

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/SaveControls/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/SaveControls/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="All" type="Button" parent="HBoxContainer/SaveControls/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "A"

[node name="Individual" type="Button" parent="HBoxContainer/SaveControls/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "I"

[node name="Relative" type="Button" parent="HBoxContainer/SaveControls/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "R"

[connection signal="value_changed" from="HBoxContainer/TabContainer/Light/ScrollContainer/HBoxContainer/LevelControls/ColorSystem/ColorSliders/HBoxContainer/Red" to="HBoxContainer/TabContainer/Light/ScrollContainer/HBoxContainer/LevelControls/ColorSystem" method="_on_red_sider_value_changed"]
[connection signal="value_changed" from="HBoxContainer/TabContainer/Light/ScrollContainer/HBoxContainer/LevelControls/ColorSystem/ColorSliders/HBoxContainer/Green" to="HBoxContainer/TabContainer/Light/ScrollContainer/HBoxContainer/LevelControls/ColorSystem" method="_on_green_slider_value_changed"]
[connection signal="value_changed" from="HBoxContainer/TabContainer/Light/ScrollContainer/HBoxContainer/LevelControls/ColorSystem/ColorSliders/HBoxContainer/Blue" to="HBoxContainer/TabContainer/Light/ScrollContainer/HBoxContainer/LevelControls/ColorSystem" method="_on_blue_slider_value_changed"]
[connection signal="resized" from="HBoxContainer/TabContainer/Light/ScrollContainer/HBoxContainer/LevelControls/ColorSystem/ColorPicker/VBoxContainer/Control" to="HBoxContainer/TabContainer/Light/ScrollContainer/HBoxContainer/LevelControls/ColorSystem/ColorPicker/VBoxContainer/Control/ColorPicker" method="_on_control_resized"]
[connection signal="color_changed" from="HBoxContainer/TabContainer/Light/ScrollContainer/HBoxContainer/LevelControls/ColorSystem/ColorPicker/VBoxContainer/Control/ColorPicker" to="HBoxContainer/TabContainer/Light/ScrollContainer/HBoxContainer/LevelControls/ColorSystem" method="_on_color_picker_color_changed"]
[connection signal="pressed" from="HBoxContainer/TabContainer/Light/ScrollContainer/HBoxContainer/LevelControls/ColorSystem/ColorPicker/VBoxContainer/ColorReset" to="HBoxContainer/TabContainer/Light/ScrollContainer/HBoxContainer/LevelControls/ColorSystem" method="_on_color_reset_pressed"]
[connection signal="item_selected" from="HBoxContainer/TabContainer/Channels/PanelContainer2/HBoxContainer2/OptionButton" to="HBoxContainer/TabContainer/Channels" method="_on_option_button_item_selected"]
[connection signal="pressed" from="HBoxContainer/TabContainer/Channels/PanelContainer2/HBoxContainer2/PanelContainer/HBoxContainer/Left" to="HBoxContainer/TabContainer/Channels" method="_on_left_pressed"]
[connection signal="pressed" from="HBoxContainer/TabContainer/Channels/PanelContainer2/HBoxContainer2/PanelContainer/HBoxContainer/Right" to="HBoxContainer/TabContainer/Channels" method="_on_right_pressed"]
[connection signal="pressed" from="HBoxContainer/TabContainer/Channels/PanelContainer2/HBoxContainer2/ClearAll" to="HBoxContainer/TabContainer/Channels" method="_on_clear_all_pressed"]
[connection signal="pressed" from="HBoxContainer/SaveControls/VBoxContainer/SaveToScene" to="HBoxContainer/SaveControls" method="_on_save_to_scene_pressed"]
[connection signal="pressed" from="HBoxContainer/SaveControls/VBoxContainer/SaveToCueList" to="HBoxContainer/SaveControls" method="_on_save_to_cue_list_pressed"]
